<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sj971.score.ManagerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"
                android:id="@+id/year"/>

            <Spinner
                android:id="@+id/select_year"
                android:layout_width="30dp"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/semester"/>

            <Spinner
                android:id="@+id/select_semester"
                android:layout_width="30dp"
                android:layout_height="wrap_content"></Spinner>

            <Button
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="조회" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="삭제"/>

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="추가"/>

        </LinearLayout>

        <ListView
            android:id="@+id/listView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
