<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sj971.score.ManagerMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/list_student"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:text="학생 정보 관리" />

        <Button
            android:id="@+id/list_professor"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:text="교수 정보 관리" />

        <Button
            android:id="@+id/list_subject"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:text="수업 정보 관리" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
