...
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TableLayout
            android:id="@+id/signupTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TableRow>
...
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="과목번호" />

                <EditText
                    android:id="@+id/subject_number"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

...
